Show Configuration Workflows in UI
Changes to show list of Job Templates and Configuration Workflows in existing UI under Automation/Ansible Tower/Explorer in Templates Accordion.

https://bugzilla.redhat.com/show_bug.cgi?id=1590441

--- a/product/views/ConfigurationScriptBase.yaml
+++ b/product/views/ConfigurationScriptBase.yaml
@@ -9,13 +9,13 @@
 #
 
 # Report title
-title: Ansible Tower Job Templates
+title: Ansible Tower Templates
 
 # Menu name
-name: Job Templates
+name: Templates
 
 # Main DB table report is based on
-db: ManageIQ::Providers::AnsibleTower::AutomationManager::ConfigurationScript
+db: ConfigurationScriptBase
 
 # Columns to fetch from the main table
 cols:
