--- a/product/views/ConfigurationScript.yaml
+++ b/product/views/ConfigurationScript.yaml
@@ -15,7 +15,7 @@ title: Ansible Tower Templates
 name: Templates
 
 # Main DB table report is based on
-db: ConfigurationScriptBase
+db: ConfigurationScript
 
 # Columns to fetch from the main table
 cols:
