--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "angular.validators": "~4.4.2",
     "base64-js": "~1.2.3",
     "bootstrap-switch": "~3.3.4",
-    "classnames": "^2.2.5",
+    "connected-react-router": "^4.3.0",
     "graphiql": "^0.11.11",
     "graphql": "^0.13.2",
+    "history": "^4.7.2",
     "jquery": "~2.2.4",
     "lodash": "^4.17.4",
     "ng-redux": "^3.5.2",
@@ -42,9 +43,11 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-select": "~1.2.1",
-    "redux": "~3.7.2",
+    "redux": "^4.0.0",
     "redux-devtools-extension": "~2.13.5",
+    "redux-thunk": "^2.3.0",
     "rxjs": "~5.6.0-forward-compat.2",
     "text-encoder-lite": "git://github.com/coolaj86/TextEncoderLite.git#e1e031b",
     "ui-select": "0.19.8"
