Try to fix Scrutinizer
and probably fail

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,3 +7,11 @@ build:
     override:
       -
         command: true
+  nodes:
+    analysis:
+      tests:
+        override:
+          -
+            command: rubocop-run
+            use_website_config: false
+          - js-scrutinizer-run
