Support new filtering options on Topology page

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql": "~0.12.0",
     "history": "^4.7.2",
     "jquery": "~2.2.4",
+    "kubernetes-topology-graph": "~0.0.25",
     "lodash": "^4.17.4",
     "patternfly": "~3.54.1",
     "patternfly-react": "2.10.1",
