--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux-thunk": "^2.3.0",
     "rxjs": "~5.6.0-forward-compat.2",
     "spice-html5-bower": "~1.7.2",
+    "spin.js": "~4.0.0",
     "sprintf-js": "~1.1.1",
     "text-encoder-lite": "git://github.com/coolaj86/TextEncoderLite.git#e1e031b",
     "ui-select": "0.19.8",
