bower to npm - numeral
used in a couple of places to do numerical transformations, including ui-components

numeral 1.5.5 had a breaking change that was undone in 1.5.6 (not sure if relevant to us), moving to 2.0.0 to preserve compatibility

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "~2.2.4",
     "kubernetes-topology-graph": "~0.0.25",
     "lodash": "^4.17.4",
+    "numeral": "~2.0.6",
     "patternfly": "~3.54.1",
     "patternfly-react": "2.10.1",
     "prop-types": "^15.6.0",
