--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "xml_display": "~0.1.1"
   },
   "devDependencies": {
+    "@babel/runtime": "7.0.0-beta.42",
     "@types/jasmine": "^2.8.6",
     "@types/jest": "^22.1.3",
     "angular-mocks": "~1.6.9",
