--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -16,6 +16,7 @@ src_files:
 - packs/runtime.js
 - packs/shims.js
 - packs/vendor.js
+- packs/manageiq-ui-classic/globals.js
 - assets/application
 - assets/bower_components/jasmine-jquery/lib/jasmine-jquery
 - assets/angular-mocks
