bower: remove QS
this was only used by the queryParam function
which is useful, but the last use was removed in https://github.com/ManageIQ/manageiq-ui-classic/pull/426

removing, we may want to consider just wrapping the new URL standard,
(the package was https://github.com/nire0510/qs , and is available on npm under the name qs-parser)

--- a/bower.json
+++ b/bower.json
@@ -28,8 +28,7 @@
     "jquery-ui": "jqueryui#~1.12.1",
     "manageiq-ui-components": "bower-dev",
     "patternfly-bootstrap-treeview": "~2.1.5",
-    "patternfly-timeline": "~1.0.5",
-    "qs": "~0.3.10"
+    "patternfly-timeline": "~1.0.5"
   },
   "resolutions": {
     "d3": "~3.5.0",
