--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "jquery": "~2.2.4",
     "kubernetes-topology-graph": "~0.0.25",
     "lodash": "~4.17.10",
+    "moment": "~2.22.2",
+    "moment-duration-format": "~2.2.2",
+    "moment-strftime": "~0.5.0",
+    "moment-timezone": "~0.5.21",
     "numeral": "~2.0.6",
     "patternfly": "~3.54.1",
     "patternfly-react": "2.10.1",
