--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql": "~0.12.0",
     "history": "^4.7.2",
     "jquery": "~2.2.4",
+    "jquery-ui": "~1.12.1",
     "jquery-ujs": "~1.2.2",
     "jquery.observe_field": "~0.1.0",
     "kubernetes-topology-graph": "~0.0.25",
