--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "graphql": "~0.12.0",
     "history": "^4.7.2",
     "jquery": "~2.2.4",
+    "jquery-ujs": "~1.2.2",
+    "jquery.observe_field": "~0.1.0",
     "kubernetes-topology-graph": "~0.0.25",
     "lodash": "~4.17.10",
     "moment": "~2.22.2",
