bower to npm - angular-ui-codemirror

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-bootstrap-switch": "~0.5.2",
     "angular-gettext": "^2.4.1",
     "angular-sanitize": "~1.6.6",
+    "angular-ui-codemirror": "~0.3.0",
     "angular.validators": "~4.4.2",
     "array-includes": "~3.0.3",
     "base64-js": "~1.2.3",
