--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "jest": "^22.0.6",
     "jest-cli": "^22.0.0",
     "js-yaml": "~3.8.3",
+    "ng-annotate-loader": "~0.6.1",
     "node-sass": "~4.9.3",
     "path-complete-extname": "~0.1.0",
     "postcss-loader": "~2.1.5",
