--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "array-includes": "~3.0.3",
     "base64-js": "~1.2.3",
     "bootstrap-switch": "~3.3.4",
+    "codemirror": "~5.19.0",
     "connected-react-router": "^4.3.0",
     "es6-shim": "~0.35.3",
     "graphiql": "^0.11.11",
