--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular": "~1.6.6",
     "angular-animate": "~1.6.6",
     "angular-bootstrap-switch": "~0.5.2",
+    "angular-dragdrop": "~1.0.13",
     "angular-gettext": "^2.4.1",
     "angular-sanitize": "~1.6.6",
     "angular-ui-codemirror": "~0.3.0",
