--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-bootstrap-switch": "~0.5.2",
     "angular-dragdrop": "~1.0.13",
     "angular-gettext": "^2.4.1",
+    "angular-patternfly": "~3.26.0",
     "angular-sanitize": "~1.6.6",
     "angular-ui-codemirror": "~0.3.0",
     "angular-ui-sortable": "~0.16.1",
