--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "moment-timezone": "~0.5.21",
     "numeral": "~2.0.6",
     "patternfly": "~3.54.1",
+    "patternfly-bootstrap-treeview": "~2.1.5",
     "patternfly-react": "2.10.1",
     "prop-types": "^15.6.0",
     "proxy-polyfill": "^0.1.7",
