--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-gettext": "^2.4.1",
     "angular-patternfly": "~3.26.0",
     "angular-sanitize": "~1.6.6",
+    "angular-ui-bootstrap": "~2.5.6",
     "angular-ui-codemirror": "~0.3.0",
     "angular-ui-sortable": "~0.16.1",
     "angular.validators": "~4.4.3",
@@ -38,6 +39,7 @@
     "bootstrap-switch": "~3.3.4",
     "codemirror": "~5.19.0",
     "connected-react-router": "^4.3.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.47",
     "es6-shim": "~0.35.3",
     "graphiql": "^0.11.11",
     "graphql": "~0.12.0",
