--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,26 @@
-// only used by jest; webpack loads .babelrc.json
 {
-  "env": {
-    "test": {
-      "presets": [
-        "react",
-      ],
-      "plugins": ["transform-es2015-modules-commonjs"],
-    },
-  },
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": [
+            "> 1%",
+            "last 2 versions",
+            "Firefox ESR",
+            "IE 10",
+            "IE 11"
+          ]
+        }
+      }
+    ],
+    "react",
+    "es2015"
+  ],
+  "plugins": [
+    "transform-class-properties",
+    "transform-export-extensions",
+    "transform-object-rest-spread",
+    "transform-object-assign"
+  ]
 }
